Update auth pom + health check
Fixed issue of locating main file in build process. Also added health check to prevent deployment if auth doesn't start correctly.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -133,6 +133,7 @@ jobs:
           
           check_health "http://localhost:7071/api/health"
           check_health "http://localhost:7070/api/health"
+          check_health "http://localhost:7075/api/health"
 
       - name: On Fail → Rollback & Notify Discord
         if: failure()
