--- a/services/auth-service/pom.xml
+++ b/services/auth-service/pom.xml
@@ -30,6 +30,7 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>mtogo.auth.server.Main</mainClass>
                                 </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                         </configuration>
                     </execution>
@@ -84,6 +85,11 @@
             <artifactId>log4j-slf4j2-impl</artifactId>
             <version>2.25.2</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>2.0.17</version>
         </dependency>
         <dependency>
             <groupId>com.rabbitmq</groupId>
