--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -14,7 +14,7 @@ configuration:
 
 documentation:
   - changed-files:
-      - any-glob-to-any-file: docs/**
+      - any-glob-to-any-file: "**/docs/**"
       - any-glob-to-any-file: "**/*.md"
 
 # Branch prefixes (Trunk-Based)
