--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
     name: Test & Build per Service
     needs: detect-changes
     if: ${{ needs.detect-changes.outputs.changed-services != '[]' }}
-    runs-on: [self-hosted, test]
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
