--- a/services/customer-service/pom.xml
+++ b/services/customer-service/pom.xml
@@ -113,6 +113,11 @@
             <version>5.20.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
+        </dependency>
     </dependencies>
 
 
