UI testing workflow change

--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -36,7 +36,10 @@ on:
 
 jobs:
   run-ui-tests:
-    runs-on: [self-hosted, ${{ inputs.environment }}]
+    runs-on:
+      - self-hosted
+      - ${{ inputs.environment }}
+
     name: Run UI Tests on ${{ inputs.environment }}
     outputs:
       result: ${{ steps.test-execution.outcome }}
