--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -67,11 +67,11 @@ jobs:
         id: url
         run: |
           if [ -n "${BASE_URL_INPUT}" ]; then
-            BASE_URL="${BASE_URL_INPUT}"
+            BASE_URL="http://localhost:7071"
           elif [ "${ENVIRONMENT}" = "prod" ]; then
             BASE_URL="https://mtogo.dk"
           else
-            BASE_URL="http://172.16.0.11:7071"
+            BASE_URL="http://localhost:7071"
           fi
 
           echo "BASE_URL=$BASE_URL" >> "$GITHUB_ENV"
