--- a/services/supplier-service/pom.xml
+++ b/services/supplier-service/pom.xml
@@ -74,6 +74,7 @@
                 <configuration>
                     <configLocation>google_checks.xml</configLocation>
                     <outputDirectory>${project.basedir}/reports/checkstyle/</outputDirectory>
+                    <failsOnError>true</failsOnError>
                 </configuration>
                 <executions>
                     <execution>
