--- a/services/redis-driver/pom.xml
+++ b/services/redis-driver/pom.xml
@@ -76,6 +76,7 @@
                 <configuration>
                     <configLocation>google_checks.xml</configLocation>
                     <outputDirectory>${project.basedir}/reports/checkstyle/</outputDirectory>
+                    <failsOnError>true</failsOnError>
                 </configuration>
                 <executions>
                     <execution>
@@ -154,15 +155,21 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>7.1.0</version>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-rabbitmq</artifactId>
+            <version>2.0.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers-junit-jupiter</artifactId>
             <version>2.0.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>7.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.redis</groupId>
