Exposed redis db to diff port so we can flush for testing

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -152,6 +152,8 @@ services:
 
   redis-active-db:
     image: redis:8.2.3-alpine
+    ports:
+      - "6380:6379"
     deploy:
       replicas: 1
     networks:
