--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -60,7 +60,23 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Load DB settings from server .env
+        run: |
+          ENV_FILE="/home/${{ secrets.SERVER_NAME }}/mtogo/.env"
+          echo "Loading DB settings from $ENV_FILE"
 
+          # Extract the values WITHOUT printing them
+          MTOGO_DB=$(grep '^MTOGO_DB=' "$ENV_FILE" | cut -d '=' -f2-)
+          MTOGO_USER=$(grep '^MTOGO_USER=' "$ENV_FILE" | cut -d '=' -f2-)
+          MTOGO_PASS=$(grep '^MTOGO_PASS=' "$ENV_FILE" | cut -d '=' -f2-)
+          
+          echo "::add-mask::$MTOGO_USER"
+          echo "::add-mask::$MTOGO_DB"
+          echo "::add-mask::$MTOGO_PASS"
+          
+          echo "POSTGRES_DB=$MTOGO_DB" >> "$GITHUB_ENV"
+          echo "POSTGRES_USER=$MTOGO_USER" >> "$GITHUB_ENV"
+          echo "POSTGRES_PASSWORD=$MTOGO_PASS" >> "$GITHUB_ENV"
 
       - name: Run UI Acceptance Tests
         run: |
@@ -68,9 +84,11 @@ jobs:
           mvn clean test
         env:
           BASE_URL: http://172.16.0.11:7071
-          POSTGRES_DB: mtogo
-          POSTGRES_USER: mtogo-user
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          REDIS_HOST: localhost
+          REDIS_PORT: 6380
 
       - name: Upload Test Reports
         if: failure()
