--- a/services/sql-driver/pom.xml
+++ b/services/sql-driver/pom.xml
@@ -27,7 +27,8 @@
                         <configuration>
                             <finalName>${project.artifactId}</finalName>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>mtogo.sql.Main</mainClass>
                                 </transformer>
                             </transformers>
@@ -206,6 +207,54 @@
             <version>1.18.42</version>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>mutation-tests</id>
 
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-maven</artifactId>
+                        <version>1.19.2</version>
+
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.pitest</groupId>
+                                <artifactId>pitest-junit5-plugin</artifactId>
+                                <version>1.2.3</version>
+                            </dependency>
+                        </dependencies>
+
+                        <configuration>
+                            <targetClasses>
+                                <param>mtogo.*</param>
+                            </targetClasses>
+
+                            <targetTests>
+                                <param>mtogo.*</param>
+                            </targetTests>
+
+                            <excludedClasses>
+                                <param>mtogo.sql.env.*</param>
+                                <param>mtogo.sql.model.*</param>
+                                <param>mtogo.sql.ports.*</param>
+                            </excludedClasses>
+
+                            <threads>4</threads>
+
+                            <outputFormats>
+                                <param>HTML</param>
+                                <param>XML</param>
+                            </outputFormats>
+
+                            <mutationThreshold>0</mutationThreshold>
+                            <timestampedReports>false</timestampedReports>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
