--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -5,6 +5,10 @@ on:
     - cron: '30 2 * * 5'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  issues: write
+
 jobs:
   mutation_test:
     runs-on: [self-hosted, test]
