--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -300,8 +300,6 @@ services:
       - backend
 
   cadvisor:
-    #image: ghcr.io/google/cadvisor:v0.55.1
-    #image: ghcr.io/google/cadvisor:latest
     image: gcr.io/cadvisor/cadvisor:v0.55.1
     deploy:
       mode: global
@@ -309,7 +307,7 @@ services:
         limits:
           cpus: '0.5'
           memory: 256M
-    privileged: true # Be able to read from host volumes
+    #privileged: true
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -317,6 +315,20 @@ services:
       - /var/lib/docker:/var/lib/docker:ro
     command:
       - '--housekeeping_interval=10s'
+    networks:
+      - backend
+    
+  grafana:
+    image: grafana/grafana:12.4.0-20585723282
+    ports:
+      - target: 3000
+        published: 3000
+        protocol: tcp
+        mode: host
+  #  environment:
+  #    - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+        - grafana-data:/var/lib/grafana
     networks:
       - backend
 
