--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Deploy Updated Stack File to Test Server
         run: cp docker-stack.yml /home/${{ secrets.SERVER_NAME }}/mtogo/
 
+      - name: Update Monitor Config
+        run: ./services/monitor-service/update_monitor-service_config.sh
+
       - name: Docker Login
         uses: docker/login-action@v3
         with:
